--- a/static/styles.css
+++ b/static/styles.css
@@ -16,3 +16,13 @@
     color: black;
     text-decoration: none;
 }
+
+img, iframe {
+    width: 400px;
+    height: 200px;
+}
+
+table, th, td {
+    border: 1px solid black;
+    border-collapse: collapse;
+}
